[tool.poetry]
name = "py-telegram-salesboard"
version = "0.1.0"
description = ""
authors = ["Egor D <bespamiatny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
flake8 = "^3.7.9"
pre-commit = "^1.20.0"
isort = "^4.3.21"
pylint = "^2.4.4"

aiogram = "^2.9.2"
aiohttp-socks = "^0.3.9"
aioredis = "^1.3.1"
emoji = "^0.5.4"
psycopg2-binary = "^2.8.5"
pytz = "^2020.1"
SQLAlchemy = "^1.3.17"
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.black]
line-length = 119
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
