[tool.poetry]
name = "py-telegram-broker"
version = "0.1.0"
description = ""
authors = ["Egor D <bespamiatny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"
aiohttp-socks = "^0.3.9"
aioredis = "^1.3.1"
emoji = "^0.5.4"
psycopg2-binary = "^2.8.5"
pytz = "^2020.1"
SQLAlchemy = "^1.3.17"
uvloop = "^0.14.0"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
flake8 = "^3.7.9"
pre-commit = "^1.20.0"
isort = "^4.3.21"
pyproject = "^1.3.1"
pylint = "^2.4.4"
alembic = "^1"

[tool.black]
line_length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
